# next-whistle-streaming-companion

./: .gitignore  config.example.yaml  pyproject.toml  run.sh
src/nwsc/: __init__.py  __main__.py  app.py  config.py  dependencies.py  logging.py
src/nwsc/dashboard/static/: app.js  style.css
src/nwsc/dashboard/templates/: base.html  config.html  index.html
src/nwsc/db/: engine.py  models.py  repository.py
src/nwsc/domain/: bout.py  clip.py  jam_cycle.py  overlay.py
src/nwsc/integrations/: base.py
src/nwsc/integrations/obs/: client.py
src/nwsc/integrations/ptz/: client.py
src/nwsc/integrations/scoreboard/: client.py
src/nwsc/routers/: clips.py  dashboard.py  game.py  health.py  obs.py  overlays.py  ptz.py  workflows.py
src/nwsc/services/: health_monitor.py  replay_file.py
tests/: conftest.py
tests/fixtures/: config.test.yaml
tests/integration/: test_game_api.py  test_health_api.py  test_overlay_api.py  test_workflow_api.py
tests/unit/: test_bout_domain.py  test_clip_domain.py  test_config.py  test_jam_cycle.py  test_obs_client.py  test_overlay_domain.py  test_ptz_client.py  test_replay_file.py  test_repository.py  test_scoreboard_client.py
